fix and add